manifests/ingress/localhost-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: localhost-db-proxy
  namespace: taskapp
spec:
  type: ExternalName
  externalName: postgres.taskapp.svc.cluster.local
